Adjust vercel.json

--- a/Tugas-React/backend-tugas-reactjs/vercel.json
+++ b/Tugas-React/backend-tugas-reactjs/vercel.json
@@ -1,16 +1,11 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "api/main.go",
-        "use": "@vercel/go"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "api/main.go"
-      }
-    ]
-  }
-  
+  "github": {
+    "silent": true
+  },
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/api/vercel.go"
+    }
+  ]
+}
