--- a/Tugas-React/backend-tugas-reactjs/.env
+++ b/Tugas-React/backend-tugas-reactjs/.env
@@ -1,4 +1,4 @@
-HOST=https://go-vercel-app-arasys-projects.vercel.app/
+HOST=go-vercel-app-arasys-projects.vercel.app/
 GIN_MODE=release
 PORT=8080
 
