--- a/Tugas-React/fp-super-bootcamp-react/package.json
+++ b/Tugas-React/fp-super-bootcamp-react/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "rollup": "^4.19.0",
     "tailwindcss": "^3.4.6"
   },
   "devDependencies": {
