Add Mahasiswa and Kuliah API, and update swagger

--- a/Tugas-React/backend-tugas-reactjs/.env
+++ b/Tugas-React/backend-tugas-reactjs/.env
@@ -1,6 +1,5 @@
-HOST=localhost:8080
-GIN_MODE=release
-PORT=8080
+HOST=go-vercel-app-arasys-projects.vercel.app
+ENVIRONMENT=production
 
 DB_HOST=aws-0-ap-southeast-1.pooler.supabase.com
 DB_USER=postgres.uzknxzlcczyytonuemii
@@ -8,4 +7,5 @@ DB_PASSWORD=AkudisiniKaudisanan14
 DB_NAME=postgres
 DB_PORT=5432
 
-ENVIRONMENT=development
+GIN_MODE=release
+PORT=8080
