--- a/Tugas-React/fp-super-bootcamp-react/.env
+++ b/Tugas-React/fp-super-bootcamp-react/.env
@@ -1,1 +1,1 @@
-VITE_API_URL=https://religious-mitzi-arasycorp-cc5d6628.koyeb.app/api
+VITE_API_URL=https://screeching-joanna-arasycorp-919c2cee.koyeb.app/
